tests/suite/manifests/rate-limit-policy/gateway-rate-limit-policy.yaml
apiVersion: gateway.nginx.org/v1alpha1
kind: RateLimitPolicy
metadata:
  name: gateway-rate-limit
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway
  rateLimit:
    local:
      rules:
      - zoneSize: 10m
        burst: 3
        key: "$binary_remote_addr"
        rate: 15r/m
    logLevel: "info"
    rejectCode: 429
