tests/suite/manifests/rate-limit-policy/listenerset-rlp.yaml
apiVersion: gateway.nginx.org/v1alpha1
kind: RateLimitPolicy
metadata:
  name: ls-route-rate-limit
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: ls-coffee
  rateLimit:
    local:
      rules:
      - zoneSize: 10m
        burst: 3
        key: "$binary_remote_addr"
        rate: 1r/m
    logLevel: "warn"
    rejectCode: 466
