tests/suite/manifests/rate-limit-policy/listenerset-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ls-coffee
spec:
  parentRefs:
  - name: extra-listeners
    kind: ListenerSet
    group: gateway.networking.k8s.io
    sectionName: http-extra
  hostnames:
  - "ls.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /coffee
    backendRefs:
    - name: coffee
      port: 80
